--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <section class="hero">
       <nav>
-        <img src="img/logo.png" height="80px" width="120px" />
+        <img src="img/Logo.png" height="80px" width="120px" />
 
         <ul id="nav-list">
           <li><a href="#about-me">About Me</a></li>
