--- a/index.html
+++ b/index.html
@@ -56,6 +56,14 @@
       </div>
     </section>
 
+    <div class="social">
+      <a href="https://github.com/Edwinallen94"
+        ><i class="bx bxl-github"></i
+      ></a>
+      <a href="https://www.linkedin.com/in/edwinallen94/"
+        ><i class="bx bxl-linkedin-square"></i
+      ></a>
+    </div>
     <!--------start about-------->
     <!-- <section class="about" id="about">
     
@@ -294,7 +302,7 @@
 
     <!--------copyright-------->
     <div class="copyright wrapper">
-      <p>Copyright © 2022, All rights Reserved.</p>
+      <p>Copyright © 2023. All rights Reserved.</p>
       <div class="push"></div>
     </div>
     <footer class="footer"></footer>
