--- a/portfolio.html
+++ b/portfolio.html
@@ -92,7 +92,7 @@
 
     <!--------copyright-------->
     <div class="copyright">
-      <p>Copyright © 2022, All rights Reserved.</p>
+      <p>Copyright © 2023. All rights Reserved.</p>
     </div>
 
     <script src="https://unpkg.com/scrollreveal"></script>
