--- a/resume.html
+++ b/resume.html
@@ -94,7 +94,7 @@
   </body>
 </html>
 <div class="copyright">
-  <p>Copyright © 2022, All rights Reserved. </p>
+  <p>Copyright © 2023. All rights Reserved.</p>
  </div>
 
  <script src="https://unpkg.com/scrollreveal"></script>
