baosingse gif update

--- a/portfolio.html
+++ b/portfolio.html
@@ -62,7 +62,7 @@
         <div class="center three" id="c">
           <div>
             <img
-              src="img/baosingsevid.gif"
+              src="img/baosingsevideoo.gif"
               alt="gif of BaoSingSe website"
               class="project"
             />
