--- a/resume.html
+++ b/resume.html
@@ -35,7 +35,7 @@
     </header>
     
      <!--------Resume-------->
-<section class="resume" id="resume">
+<section class="services" id="resume">
   <div class="center">
     <h3>Education & Experience</h3>
   </div>
