resume and box responsiveness

--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,7 @@
       </ul>
     </header>
 
-    <section class="services" id="portfolio">
+    <section class="resume" id="portfolio">
       <div class="center">
         <h3>Projects I've Done</h3>
       </div>
