--- a/resume.html
+++ b/resume.html
@@ -41,7 +41,7 @@
   </div>
 
   <div class="resume-content">
-    <div class="box">
+    <div class="box row">
       <h6>November 2022</h6>
       <h4>Certified JavaScript Developer</h4>
       <p>Creditional ID 1N4RDQLFFS stating the developer has fundamental knowledge of web development using JavaScript and teh HTML DOM.</p>
