--- a/portfolio.html
+++ b/portfolio.html
@@ -40,7 +40,7 @@
       </div>
 
       <div class="resume-content" id="flex">
-        <div class="box one" id="a">
+        <div class="box row one" id="a">
           <h6>Responsive Dyanmic Website</h6>
           <h4>Omnifood</h4>
           <p>Created with HTML5, CSS3, & JavaScript</p>
@@ -50,7 +50,7 @@
             >
           </h5>
         </div>
-        <div class="center two" id="b">
+        <div class="center row two" id="b">
           <div>
             <img
               src="img/Omni.gif"
@@ -68,7 +68,7 @@
             />
           </div>
         </div>
-        <div class="box four" id="d">
+        <div class="box row four" id="d">
           <h6>Full Stack E-Commerce Website</h6>
           <h4>Bao Sing Se</h4>
           <p>
