--- a/resume.html
+++ b/resume.html
@@ -47,7 +47,7 @@
       <p>Creditional ID 1N4RDQLFFS stating the developer has fundamental knowledge of web development using JavaScript and teh HTML DOM.</p>
       <h5>W3Schools.com</h5>
     </div> 
-    <div class="box">
+    <div class="box row">
       <h6>August 2022 - December 2022</h6>
       <h4>Junior Full Stack Java Developer</h4>
       <p>Participated in a 16-week, 460+ hour Junior Full Stack   Java Developer program that emphasizes hands-on practical application.
@@ -55,28 +55,28 @@
       <h5>Generation USA | Remote</h5>
     </div>
 
-    <div class="box">
+    <div class="box row">
       <h6>February 2022 - June 2022</h6>
       <h4>STEM Instructor</h4>
       <p>	Directed clear objectives for all lesson plans for Scratch programming, Minecraft architecture, Stop Motion, and projects while communicating them to students</p>
       <h5>Make Inspires | Mamaroneck, NY</h5>
     </div>
 
-    <div class="box">
+    <div class="box row">
       <h6>November 2021 - January 2022</h6>
       <h4>Patient Care Associate</h4>
       <p>Communicated and collaborated with Charge Nurse and Nurse teams to provide care for patients via messaging system through an electronic health record system</p>
       <h5>eTeams Inc/ Lincoln Hospital | Bronx, NY </h5>
     </div>
 
-    <div class="box">
+    <div class="box row">
       <h6>November 2020 - March 2021</h6>
       <h4>Medical Assistant</h4>
       <p>Collected and maintained accurate patient medical records and utilized computer applications to input patient data into electronic health system</p>
       <h5>Doctor's United | White Plains, NY</h5>
     </div>
 
-    <div class="box">
+    <div class="box row">
       <h6>August 2016 - December 2019</h6>
       <h3>B.S. in Recreation & Sport Management: Pre-Recreational Therapy & Adaptive Recreation</h3>
       <br>
