--- a/index.html
+++ b/index.html
@@ -45,7 +45,10 @@
           I design and develop services for customers of all sizes, specializing
           in creating stylish modern websites, web servcies and online stores.
         </p>
-        <a href="AriadnaVanegasRubio_Resume.pdf" target="_blank" class="btn"
+        <a
+          href="AriadnaVanegasRubio_WebDevResume.pdf"
+          target="_blank"
+          class="btn"
           >Download Resume</a
         >
       </div>
