--- a/portfolio.html
+++ b/portfolio.html
@@ -39,18 +39,18 @@
         <h3>Projects I've Done</h3>
       </div>
 
-      <div class="resume-content" id="flex">
+      <div class="service-content" id="flex">
         <div class="box row one" id="a">
           <h6>Responsive Dyanmic Website</h6>
           <h4>Omnifood</h4>
           <p>Created with HTML5, CSS3, & JavaScript</p>
           <h5>
-            <a href="https://sage-duckanoo-16845c.netlify.app/" target="_blank"
-              >See Here</a
+            <a href="https://omnifood.avrubio.dev/" target="_blank"
+              >Live Demo</a
             >
           </h5>
         </div>
-        <div class="center row two" id="b">
+        <div class="center two" id="b">
           <div>
             <img
               src="img/Omni.gif"
@@ -80,7 +80,7 @@
             <a
               href="https://avrubio.github.io/ItemsApi//itemsAPI/src/frontend/build/about.html"
               target="_blank"
-              >See Here</a
+              >Live Demo</a
             >
           </h5>
         </div>
