--- a/resume.html
+++ b/resume.html
@@ -41,10 +41,17 @@
   </div>
 
   <div class="resume-content">
+
+    <div class="box row">
+      <h6>March 2023 - Present</h6>
+      <h4>Software Engineer Intern</h4>
+      <p>Developed and troubleshooted custom web scraping scripts that increased leads by <strong>23%</strong> and brought in over <strong>6,000+</strong> leads</p>
+      <h5>Mioym Equites | Rye Brook, NY</h5>
+    </div>
     <div class="box row">
       <h6>November 2022</h6>
       <h4>Certified JavaScript Developer</h4>
-      <p>Creditional ID 1N4RDQLFFS stating the developer has fundamental knowledge of web development using JavaScript and teh HTML DOM.</p>
+      <p>Creditional ID 1N4RDQLFFS stating the developer has fundamental knowledge of web development using JavaScript and the HTML DOM.</p>
       <h5>W3Schools.com</h5>
     </div> 
     <div class="box row">
@@ -58,32 +65,26 @@
     <div class="box row">
       <h6>February 2022 - June 2022</h6>
       <h4>STEM Instructor</h4>
-      <p>	Directed clear objectives for all lesson plans for Scratch programming, Minecraft architecture, Stop Motion, and projects while communicating them to students</p>
+      <p>Implemented and curated curricula to enhance learning and retention of coding techniques and methodologies by <strong>20%</strong> </p>
       <h5>Make Inspires | Mamaroneck, NY</h5>
     </div>
 
     <div class="box row">
       <h6>November 2021 - January 2022</h6>
       <h4>Patient Care Associate</h4>
-      <p>Communicated and collaborated with Charge Nurse and Nurse teams to provide care for patients via messaging system through an electronic health record system</p>
+      <p>Maintained <strong>700+ </strong> client records and utilized CRM to analyze patient data, thereby improving the delivery of medical care by <strong>30%</strong></p>
       <h5>eTeams Inc/ Lincoln Hospital | Bronx, NY </h5>
     </div>
 
-    <div class="box row">
-      <h6>November 2020 - March 2021</h6>
-      <h4>Medical Assistant</h4>
-      <p>Collected and maintained accurate patient medical records and utilized computer applications to input patient data into electronic health system</p>
-      <h5>Doctor's United | White Plains, NY</h5>
-    </div>
 
     <div class="box row">
       <h6>August 2016 - December 2019</h6>
       <h3>B.S. in Recreation & Sport Management: Pre-Recreational Therapy & Adaptive Recreation</h3>
-      <br>
+      
       <p>
         Participated in various philantrophic events as a member in Phi Mu Fraternity.</p>
       <br>
-      <h5>Florida International Univeristy | Sweetwater, Fl</h5>
+      <h5>Florida International Univeristy | Sweetwater, FL</h5>
     </div> 
 
   
