--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 
             <div class="about__info">
               <div>
-                <span class="about__info-title">08+</span>
+                <span class="about__info-title">2+</span>
                 <span class="about__info-name"
                   >Years <br />
                   experience</span
@@ -190,7 +190,7 @@
               </div>
 
               <div>
-                <span class="about__info-title">20+</span>
+                <span class="about__info-title">5+</span>
                 <span class="about__info-name"
                   >Completed <br />
                   projects</span
@@ -198,7 +198,7 @@
               </div>
 
               <div>
-                <span class="about__info-title">05+</span>
+                <span class="about__info-title">2+</span>
                 <span class="about__info-name"
                   >Companies <br />
                   worked</span
@@ -213,7 +213,7 @@
                 href="assets/pdf/AriadnaVanegas-Rubio_WebDevResume.pdf"
                 class="button button--flex"
               >
-                Download CV <i class="uil uil-download-alt button__icon"></i>
+                Download Resume <i class="uil uil-download-alt button__icon"></i>
               </a>
             </div>
           </div>
