Live demo links edited

--- a/index.html
+++ b/index.html
@@ -779,7 +779,7 @@
                   animated interactions.
                 </p>
                 <a
-                  href="omnifood.avrubio.dev"
+                  href="omnifoodavrubio.netlify.app"
                   class="button button--flex button--small portfolio__button"
                 >
                   Live Demo
@@ -803,7 +803,7 @@
                   animated interactions.
                 </p>
                 <a
-                  href="#"
+                  href="https://avrubio.github.io/ItemsApi/itemsAPI/src/frontend/build/index.html"
                   class="button button--flex button--small portfolio__button"
                 >
                   Live Demo
