--- a/index.html
+++ b/index.html
@@ -982,9 +982,7 @@
             </div>
           </div>
 
-          <form action="mailto:ariadna.vanegas@gmail.com" method="POST"
-          enctype="multipart/form-data"
-          name="EmailForm"
+          <form action="https://formcarry.com/s/-ctxckB3Lq" method="POST" accept-charset="UTF-8""
           class="contact__form grid">
           <div class="contact__inputs grid">
             <div class="contact__content">
