Pure Glow Skincare ecommerce site added in portfol

--- a/index.html
+++ b/index.html
@@ -742,7 +742,7 @@
         <div class="portfolio__container container swiper-container">
           <div class="swiper-wrapper">
 
-              <!--=============== PORTFOLIO 3 ===============-->
+              <!--=============== PORTFOLIO 1 ===============-->
               <div class="portfolio__content grid swiper-slide">
                 <img
                   src="assets/img/CCform.gif"
@@ -764,7 +764,8 @@
                   </a>
                 </div>
               </div>
-            <!--=============== PORTFOLIO 1 ===============-->
+
+                  <!--=============== PORTFOLIO 2 ===============-->
             <div class="portfolio__content grid swiper-slide">
               <img
                 src="assets/img/Omni.gif"
@@ -779,7 +780,7 @@
                   animated interactions.
                 </p>
                 <a
-                  href="omnifoodavrubio.netlify.app"
+                  href="omnifood.avrubio.dev"
                   class="button button--flex button--small portfolio__button"
                 >
                   Live Demo
@@ -788,7 +789,30 @@
               </div>
             </div>
 
-            <!--=============== PORTFOLIO 2 ===============-->
+            <!--=============== PORTFOLIO 3 ===============-->
+            <div class="portfolio__content grid swiper-slide">
+              <img
+                src="assets/img/PureGlowScreen.png"
+                alt=""
+                class="portfolio__img"
+              />
+
+              <div class="portfolio__data">
+                <h3 class="portfolio__title">Skin Care Ecommerce Site</h3>
+                <p class="portfolio__description">
+                  Ecomm website made with vanilla Js, HTML, CSS, web responsive design with shopping cart.
+                </p>
+                <a
+                  href="pureglow.avrubio.dev"
+                  class="button button--flex button--small portfolio__button"
+                >
+                  Live Demo
+                  <i class="uil uil-arrow-right button__icon"></i>
+                </a>
+              </div>
+            </div>
+
+            <!--=============== PORTFOLIO 4 ===============-->
             <div class="portfolio__content grid swiper-slide">
               <img
                 src="assets/img/baosingsevideoo.gif"
