portfolio links fixed

--- a/index.html
+++ b/index.html
@@ -780,7 +780,7 @@
                   animated interactions.
                 </p>
                 <a
-                  href="omnifood.avrubio.dev"
+                  href="https://omnifood.avrubio.dev/"
                   class="button button--flex button--small portfolio__button"
                 >
                   Live Demo
