folio links fixed

--- a/index.html
+++ b/index.html
@@ -803,7 +803,7 @@
                   Ecomm website made with vanilla Js, HTML, CSS, web responsive design with shopping cart.
                 </p>
                 <a
-                  href="pureglow.avrubio.dev"
+                  href="https://pureglow.avrubio.dev/"
                   class="button button--flex button--small portfolio__button"
                 >
                   Live Demo
