--- a/index.html
+++ b/index.html
@@ -993,7 +993,7 @@
               <i class="uil uil-envelope contact__icon"></i>
               <div>
                 <h3 class="contact__title">Email</h3>
-                <span class="contact__subtitle">ariadna.vanegas@email.com</span>
+                <span class="contact__subtitle">ariadna.vanegas@gmail.com</span>
               </div>
             </div>
 
