soical links fixed

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           <div class="home__content grid">
             <div class="home__social">
               <a
-                href="https://www.linkedin.com/avrubio"
+                href="https://www.linkedin.com/in/avrubio"
                 target="_blank"
                 class="home__social-icon"
               >
@@ -93,7 +93,7 @@
               </a>
 
               <a
-                href="https://dribbble.com/"
+                href="https://twitter.com/dev_arie"
                 target="_blank"
                 class="home__social-icon"
               >
@@ -1061,7 +1061,7 @@
 
           <div class="footer__socials">
             <a
-                href="https://www.linkedin.com/avrubio"
+                href="https://www.linkedin.com/in/avrubio/"
                 target="_blank"
                 class="footer__social"
               >
