Updated contact me photo

--- a/index.html
+++ b/index.html
@@ -970,7 +970,7 @@
               </a>
             </div>
 
-            <image src="assets/img/ContactPhoto.png" alt="" class="project__img" />
+            <image src="assets/img/TransparentNewHeadshot (1).png" alt="" class="project__img" />
           </div>
         </div>
       </section>
