update on resume and education section

--- a/index.html
+++ b/index.html
@@ -260,6 +260,15 @@
                     <span class="skills__percentage skills__css"></span>
                   </div>
                 </div>
+                <div class="skills__data">
+                  <div class="skills__titles">
+                    <h3 class="skills__name">Material UI</h3>
+                    <span class="skills__number">20%</span>
+                  </div>
+                  <div class="skills__bar">
+                    <span class="skills__percentage skills__materialui"></span>
+                  </div>
+                </div>
 
                 <div class="skills__data">
                   <div class="skills__titles">
@@ -438,7 +447,27 @@
               data-content
               id="education"
             >
+<!--=============== QUALIFICATION 1 ===============-->
+<div class="qualification__data">
+  <div>
+    <h3 class="qualification__title">
+    JavaScript Fundamentals Course
+    </h3>
+    <span class="qualification__subtitle"
+      >CanCode Communities - Remote</span
+    >
+    <div class="qualification__calendar">
+      <i class="uil uil-calendar-alt"></i>
+      2023
+    </div>
+  </div>
 
+  <div>
+    <span class="qualification__rounder"></span>
+    <span class="qualification__line"></span>
+  </div>
+</div>
+<!--=============== QUALIFICATION 2 ===============-->
             <div class="qualification__data">
               <div></div>
 
@@ -459,8 +488,51 @@
                   2023
                 </div>
               </div>
+            </div>   
+             <!--=============== QUALIFICATION 3 ===============-->
+            <div class="qualification__data">
+              <div>
+                <h3 class="qualification__title">
+                 JavaScript Frameworks Course
+                </h3>
+                <span class="qualification__subtitle"
+                  >CanCode Communities - Remote</span
+                >
+                <div class="qualification__calendar">
+                  <i class="uil uil-calendar-alt"></i>
+                  2023
+                </div>
+              </div>
+
+              <div>
+                <span class="qualification__rounder"></span>
+                <span class="qualification__line"></span>
+              </div>
             </div>
-              <!--=============== QUALIFICATION 1 ===============-->
+
+            <!--=============== QUALIFICATION 4 ===============-->
+            <div class="qualification__data">
+              <div></div>
+
+              <div>
+                <span class="qualification__rounder"></span>
+                <span class="qualification__line"></span>
+              </div>
+
+              <div>
+                <h3 class="qualification__title">
+                Intro to JavaScript Course
+                </h3>
+                <span class="qualification__subtitle"
+                  >Code First Girls - Remote</span
+                >
+                <div class="qualification__calendar">
+                  <i class="uil uil-calendar-alt"></i>
+                  2023
+                </div>
+              </div>
+            </div>
+              <!--=============== QUALIFICATION 5===============-->
               <div class="qualification__data">
                 <div>
                   <h3 class="qualification__title">
@@ -481,7 +553,7 @@
                 </div>
               </div>
 
-              <!--=============== QUALIFICATION 2 ===============-->
+              <!--=============== QUALIFICATION 6 ===============-->
               <div class="qualification__data">
                 <div></div>
 
@@ -504,7 +576,7 @@
                 </div>
               </div>
 
-              <!--=============== QUALIFICATION 3 ===============-->
+              <!--=============== QUALIFICATION 7 ===============-->
               <div class="qualification__data">
                 <div>
                   <h3 class="qualification__title">     B.S. Therapeutic Recreation</h3>
