JVS Health project added

--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
 
                 <div class="skills__data">
                   <div class="skills__titles">
-                    <h3 class="skills__name">Springboot</h3>
+                    <h3 class="skills__name">Spring Boot</h3>
                     <span class="skills__number">55%</span>
                   </div>
                   <div class="skills__bar">
@@ -870,6 +870,29 @@
                 </div>
               </div>
 
+
+<!--=============== PORTFOLIO 1 ===============-->
+<div class="portfolio__content grid swiper-slide">
+  <img
+    src="assets/img/JVSHealth.png"
+    alt=""
+    class="portfolio__img"
+  />
+
+  <div class="portfolio__data">
+    <h3 class="portfolio__title">JVS Health API Management </h3>
+    <p class="portfolio__description">
+      The JVS-Health API is a comprehensive Health Management System designed to efficiently manage medical information, specifically focusing on Doctors, Patients, and Prescriptions. It enables healthcare providers to perform essential tasks such as registration, authentication, patient management, prescription assignments/management.
+    </p>
+    <a
+      href="https://github.com/ShaylaWhite/JVS-Health"
+      class="button button--flex button--small portfolio__button"
+    >
+      Code Base
+      <i class="uil uil-arrow-right button__icon"></i>
+    </a>
+  </div>
+</div>
               <!--=============== PORTFOLIO 1 ===============-->
               <div class="portfolio__content grid swiper-slide">
                 <img
@@ -881,7 +904,7 @@
                 <div class="portfolio__data">
                   <h3 class="portfolio__title">Credit Card Form</h3>
                   <p class="portfolio__description">
-                    Interative responsive validation credit card form created in collabration with Josh Cash.
+                    Interactive responsive validation credit card form created in collaboration with Josh Cash.
                   </p>
                   <a
                     href="https://ccform.avrubio.dev/"
@@ -974,9 +997,9 @@
               />
 
               <div class="portfolio__data">
-                <h3 class="portfolio__title">Skin Care Ecommerce Site</h3>
+                <h3 class="portfolio__title">Skin Care E-commerce Site</h3>
                 <p class="portfolio__description">
-                  Ecomm website made with vanilla Js, HTML, CSS, web responsive design with shopping cart.
+                  E-commerce website made with vanilla Js, HTML, CSS, web responsive design with shopping cart.
                 </p>
                 <a
                   href="https://pureglow.avrubio.dev/"
