Front end changed to Full Stack

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
             <div class="home__data">
               <h1 class="home__title">Hi, I'm Ariadna</h1>
-              <h3 class="home__subtitle">Frontend developer</h3>
+              <h3 class="home__subtitle">Full Stack developer</h3>
               <p class="home__description">
                 High level experience in web design and development knowledge,
                 producing quality work.
@@ -175,7 +175,7 @@
 
           <div class="about__data">
             <p class="about__description">
-              Passionate, detail-oriented Front-End Developer with a proven track record of 1 year in spearheading the conception and implementation of cutting-edge front end technologies & 6 years of analyzing data, technical processes, and collaboration in teams.
+              Passionate, detail-oriented Full Stack Developer with a proven track record of 1 year in spearheading the conception and implementation of cutting-edge full stack technologies & 6 years of analyzing data, technical processes, and collaboration in teams.
 
              
             </p>
@@ -723,7 +723,7 @@
                 <ul class="services__modal-services grid">
                   <li class="services__modal-service">
                     <i class="uil uil-check-circle services__modal-icon"></i>
-                    <p>I develop responsive and interactice user interfaces.</p>
+                    <p>I develop responsive and interactive user interfaces.</p>
                   </li>
                   <li class="services__modal-service">
                     <i class="uil uil-check-circle services__modal-icon"></i>
