removing hello from my personal journey

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
       <!--==================== SKILLS ====================-->
       <section class="qualification section">
         <h2 class="section__title">Qualification</h2>
-        <span class="section__subtitle">My personal journey HELLO</span>
+        <span class="section__subtitle">My personal journey</span>
       
         <div class="qualification__container container">
           <div class="qualification__tabs">
