updated color and spel check

--- a/index.html
+++ b/index.html
@@ -222,8 +222,8 @@
 
       <!--==================== SKILLS ====================-->
       <section class="qualification section">
-        <h2 class="section__title">Qualification</h2>
-        <span class="section__subtitle">My personal journey</span>
+        <h2 class="section__title">Qualifications</h2>
+        <span class="section__subtitle">My Personal Journey</span>
       
         <div class="qualification__container container">
           <div class="qualification__tabs">
@@ -531,7 +531,7 @@
       <!--==================== SERVICES ====================-->
       <section class="services section" id="services">
         <h2 class="section__title">Services</h2>
-        <span class="section__subtitle">What I offer</span>
+        <span class="section__subtitle">What I Offer</span>
 
         <div class="services__container container grid">
           <!--=============== SERVICES 1 ===============-->
@@ -1082,7 +1082,7 @@
         <div class="footer__container container grid">
           <div>
             <h1 class="footer__title">Ariadna</h1>
-            <span class="footer__subtitle">Fullstack developer</span>
+            <span class="footer__subtitle">Full Stack Developer</span>
           </div>
 
           <ul class="footer__links">
